fix contact modal overflow

--- a/app/components/modal/ContactModal.module.css
+++ b/app/components/modal/ContactModal.module.css
@@ -2,16 +2,17 @@
   position: fixed;
   top: 0;
   left: 0;
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100vh;
+  width: 100vw;
+  overflow: scroll;
   z-index: 100;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .contactModalBackdrop {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -41,6 +42,7 @@
 @media screen and (min-width: 750px) {
   .contactModalBox {
     margin: 4rem;
+    margin-top: 5%;
     padding: 3.6rem 6rem 6rem;
   }
 }
